@@ -9,6 +9,10 @@ import com.intellij.openapi.project.Project;
 import com.microsoft.azure.management.applicationinsights.v2015_05_01.ApplicationInsightsComponent;
 import com.microsoft.azure.management.appservice.*;
 import com.microsoft.azure.management.resources.fluentcore.arm.ResourceUtils;
+import com.microsoft.azure.toolkit.lib.Azure;
+import com.microsoft.azure.toolkit.lib.appservice.AzureAppService;
+import com.microsoft.azure.toolkit.lib.appservice.model.DiagnosticConfig;
+import com.microsoft.azure.toolkit.lib.appservice.service.*;
 import com.microsoft.azure.toolkit.lib.common.exception.AzureToolkitRuntimeException;
 import com.microsoft.azure.toolkit.lib.common.operation.AzureOperation;
 import com.microsoft.azure.toolkit.lib.common.operation.AzureOperationBundle;
@@ -16,23 +20,23 @@ import com.microsoft.azure.toolkit.lib.common.operation.IAzureOperationTitle;
 import com.microsoft.azure.toolkit.lib.common.task.AzureTask;
 import com.microsoft.azure.toolkit.lib.common.task.AzureTaskManager;
 import com.microsoft.azuretools.authmanage.AuthMethodManager;
+import com.microsoft.azuretools.authmanage.SubscriptionManager;
 import com.microsoft.azuretools.authmanage.models.SubscriptionDetail;
 import com.microsoft.azuretools.core.mvp.model.AzureMvpModel;
 import com.microsoft.azuretools.core.mvp.model.function.AzureFunctionMvpModel;
-import com.microsoft.azuretools.core.mvp.model.webapp.AzureWebAppMvpModel;
 import com.microsoft.azuretools.sdkmanage.AzureManager;
 import com.microsoft.intellij.util.PluginUtil;
 import com.microsoft.tooling.msservices.components.DefaultLoader;
 import com.microsoft.tooling.msservices.helpers.azure.sdk.AzureSDKManager;
+import hu.akarnokd.rxjava3.interop.RxJavaInterop;
 import org.apache.commons.lang3.StringUtils;
+import reactor.adapter.rxjava.RxJava3Adapter;
 import rx.Observable;
 
 import java.io.IOException;
-import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
+import java.nio.charset.StandardCharsets;
+import java.util.*;
 
 import static com.microsoft.intellij.ui.messages.AzureBundle.message;
 
@@ -50,7 +54,7 @@ public enum AppServiceStreamingLogManager {
     private static final String SUBSCRIPTIONS = "subscriptions";
     private static final String[] YES_NO = {"Yes", "No"};
 
-    private Map<String, AppServiceStreamingLogConsoleView> consoleViewMap = new HashMap<>();
+    private final Map<String, AppServiceStreamingLogConsoleView> consoleViewMap = new HashMap<>();
 
     public void showWebAppDeploymentSlotStreamingLog(Project project, String slotId) {
         showAppServiceStreamingLog(project, slotId, new WebAppSlotLogStreaming(slotId));
@@ -108,20 +112,19 @@ public enum AppServiceStreamingLogManager {
                 }
                 StreamingLogsToolWindowManager.getInstance().showStreamingLogConsole(
                         project, resourceId, logStreaming.getTitle(), consoleView);
-            } catch (Throwable e) {
+            } catch (final Throwable e) {
                 throw new AzureToolkitRuntimeException("failed to open streaming log", e);
             }
         }));
     }
 
     private AppServiceStreamingLogConsoleView getOrCreateConsoleView(Project project, String resourceId) {
-        return consoleViewMap.compute(resourceId, (id, view) -> {
-            return (view == null || view.isDisposed()) ? new AppServiceStreamingLogConsoleView(project, id) : view;
-        });
+        return consoleViewMap.compute(resourceId,
+                                      (id, view) -> (view == null || view.isDisposed()) ? new AppServiceStreamingLogConsoleView(project, id) : view);
     }
 
     interface ILogStreaming {
-        default boolean isLogStreamingSupported() throws IOException {
+        default boolean isLogStreamingSupported() {
             return true;
         }
 
@@ -140,7 +143,7 @@ public enum AppServiceStreamingLogManager {
         private static final String APPLICATION_INSIGHT_PATTERN = "%s/#blade/AppInsightsExtension/QuickPulseBladeV2/ComponentId/%s/ResourceId/%s";
         private static final String MUST_CONFIGURE_APPLICATION_INSIGHTS = message("appService.logStreaming.error.noApplicationInsights");
 
-        private String resourceId;
+        private final String resourceId;
         private FunctionApp functionApp;
 
         FunctionLogStreaming(final String resourceId) {
@@ -148,13 +151,12 @@ public enum AppServiceStreamingLogManager {
         }
 
         @Override
-        public boolean isLogStreamingEnabled() throws IOException {
-            return getFunctionApp().operatingSystem() == OperatingSystem.LINUX ?
-                   true : AzureFunctionMvpModel.isApplicationLogEnabled(getFunctionApp());
+        public boolean isLogStreamingEnabled() {
+            return getFunctionApp().operatingSystem() == OperatingSystem.LINUX || AzureFunctionMvpModel.isApplicationLogEnabled(getFunctionApp());
         }
 
         @Override
-        public void enableLogStreaming() throws IOException {
+        public void enableLogStreaming() {
             AzureFunctionMvpModel.enableApplicationLog(getFunctionApp());
         }
 
@@ -183,11 +185,12 @@ public enum AppServiceStreamingLogManager {
             final String aiKey = aiAppSettings.value();
             final String subscriptionId = AzureMvpModel.getSegment(resourceId, SUBSCRIPTIONS);
             final AzureManager azureManager = AuthMethodManager.getInstance().getAzureManager();
-            final SubscriptionDetail subscriptionDetail = azureManager.getSubscriptionManager()
-                                                                      .getSubscriptionIdToSubscriptionDetailsMap()
-                                                                      .get(subscriptionId);
+            final SubscriptionDetail subscriptionDetail = Optional.ofNullable(azureManager)
+                                                                  .map(AzureManager::getSubscriptionManager)
+                                                                  .map(SubscriptionManager::getSubscriptionIdToSubscriptionDetailsMap)
+                                                                  .map(map -> map.get(subscriptionId)).orElse(null);
             final List<ApplicationInsightsComponent> insightsResources =
-                    AzureSDKManager.getInsightsResources(subscriptionDetail);
+                subscriptionDetail == null ? Collections.EMPTY_LIST : AzureSDKManager.getInsightsResources(subscriptionDetail);
             final ApplicationInsightsComponent target = insightsResources
                     .stream()
                     .filter(aiResource -> StringUtils.equals(aiResource.instrumentationKey(), aiKey))
@@ -197,99 +200,89 @@ public enum AppServiceStreamingLogManager {
             DefaultLoader.getIdeHelper().openLinkInBrowser(aiUrl);
         }
 
-        private String getApplicationInsightLiveMetricsUrl(ApplicationInsightsComponent target, String portalUrl)
-                throws UnsupportedEncodingException {
+        private String getApplicationInsightLiveMetricsUrl(ApplicationInsightsComponent target, String portalUrl) {
             final JsonObject componentObject = new JsonObject();
             componentObject.addProperty("Name", target.name());
             componentObject.addProperty("SubscriptionId", AzureMvpModel.getSegment(target.id(), SUBSCRIPTIONS));
             componentObject.addProperty("ResourceGroup", target.resourceGroupName());
-            final String componentId = URLEncoder.encode(componentObject.toString(), "utf-8");
-            final String aiResourceId = URLEncoder.encode(target.id(), "utf-8");
+            final String componentId = URLEncoder.encode(componentObject.toString(), StandardCharsets.UTF_8);
+            final String aiResourceId = URLEncoder.encode(target.id(), StandardCharsets.UTF_8);
             return String.format(APPLICATION_INSIGHT_PATTERN, portalUrl, componentId, aiResourceId);
         }
 
-        private FunctionApp getFunctionApp() throws IOException {
+        private FunctionApp getFunctionApp() {
             if (functionApp == null) {
-                functionApp = AzureFunctionMvpModel.getInstance().getFunctionById(
-                        AzureMvpModel.getSegment(resourceId, SUBSCRIPTIONS), resourceId);
+                functionApp = AzureFunctionMvpModel.getInstance().getFunctionById(AzureMvpModel.getSegment(resourceId, SUBSCRIPTIONS), resourceId);
             }
             return functionApp;
         }
     }
 
     static class WebAppLogStreaming implements ILogStreaming {
-        private String resourceId;
-        private WebApp webApp;
+        private final IWebApp webApp;
 
         public WebAppLogStreaming(String resourceId) {
-            this.resourceId = resourceId;
+            this.webApp = Azure.az(AzureAppService.class).webapp(resourceId);
         }
 
         @Override
-        public boolean isLogStreamingEnabled() throws IOException {
-            return AzureWebAppMvpModel.isHttpLogEnabled(getWebApp());
+        public boolean isLogStreamingEnabled() {
+            return webApp.getDiagnosticConfig().isEnableWebServerLogging();
         }
 
         @Override
-        public void enableLogStreaming() throws IOException {
-            AzureWebAppMvpModel.enableHttpLog(getWebApp().update());
+        public void enableLogStreaming() {
+            final DiagnosticConfig diagnosticConfig = webApp.getDiagnosticConfig();
+            webApp.update().withDiagnosticConfig(enableHttpLog(diagnosticConfig)).commit();
         }
 
         @Override
         public String getTitle() {
-            return AzureMvpModel.getSegment(resourceId, SITES);
+            return AzureMvpModel.getSegment(webApp.id(), SITES);
         }
 
         @Override
-        public Observable<String> getStreamingLogContent() throws IOException {
-            return getWebApp().streamAllLogsAsync();
-        }
-
-        private WebApp getWebApp() throws IOException {
-            if (webApp == null) {
-                webApp = AzureWebAppMvpModel.getInstance().getWebAppById(
-                        AzureMvpModel.getSegment(resourceId, SUBSCRIPTIONS), resourceId);
-            }
-            return webApp;
+        public Observable<String> getStreamingLogContent() {
+            return RxJavaInterop.toV1Observable(RxJava3Adapter.fluxToFlowable(webApp.streamAllLogsAsync()));
         }
     }
 
     static class WebAppSlotLogStreaming implements ILogStreaming {
-        private String resourceId;
-        private DeploymentSlot deploymentSlot;
+        private final IWebAppDeploymentSlot deploymentSlot;
 
         public WebAppSlotLogStreaming(String resourceId) {
-            this.resourceId = resourceId;
+            this.deploymentSlot = Azure.az(AzureAppService.class).deploymentSlot(resourceId);
         }
 
         @Override
-        public boolean isLogStreamingEnabled() throws IOException {
-            return AzureWebAppMvpModel.isHttpLogEnabled(getDeploymentSlot());
+        public boolean isLogStreamingEnabled() {
+            return deploymentSlot.getDiagnosticConfig().isEnableWebServerLogging();
         }
 
         @Override
-        public void enableLogStreaming() throws IOException {
-            AzureWebAppMvpModel.enableHttpLog(getDeploymentSlot().update());
+        public void enableLogStreaming() {
+            final DiagnosticConfig diagnosticConfig = deploymentSlot.getDiagnosticConfig();
+            deploymentSlot.update().withDiagnosticConfig(enableHttpLog(diagnosticConfig)).commit();
         }
 
         @Override
         public String getTitle() {
-            return AzureMvpModel.getSegment(resourceId, SLOTS);
+            return AzureMvpModel.getSegment(deploymentSlot.id(), SLOTS);
         }
 
         @Override
-        public Observable<String> getStreamingLogContent() throws IOException {
-            return getDeploymentSlot().streamAllLogsAsync();
+        public Observable<String> getStreamingLogContent() {
+            return RxJavaInterop.toV1Observable(RxJava3Adapter.fluxToFlowable(deploymentSlot.streamAllLogsAsync()));
         }
+    }
 
-        private DeploymentSlot getDeploymentSlot() throws IOException {
-            if (deploymentSlot == null) {
-                final String subscriptionId = AzureMvpModel.getSegment(resourceId, SUBSCRIPTIONS);
-                final String webAppId = resourceId.substring(0, resourceId.indexOf("/slots"));
-                final WebApp webApp = AzureWebAppMvpModel.getInstance().getWebAppById(subscriptionId, webAppId);
-                deploymentSlot = webApp.deploymentSlots().getById(resourceId);
-            }
-            return deploymentSlot;
-        }
+    // Refers values from Azure app service SDK
+    // https://github.com/Azure/azure-sdk-for-java/blob/azure-resourcemanager-appservice_2.3.0/sdk/resourcemanager/azure-resourcemanager-appservice/src/
+    // main/java/com/azure/resourcemanager/appservice/implementation/WebAppBaseImpl.java#L1565
+    private static DiagnosticConfig enableHttpLog(DiagnosticConfig config) {
+        config.setEnableWebServerLogging(true);
+        config.setWebServerLogQuota(35);
+        config.setWebServerRetentionPeriod(0);
+        return config;
     }
 }
